--- a/style.css
+++ b/style.css
@@ -15,7 +15,7 @@
 
 /*__________________________Scrollbar__________________________*/
 
-/*Met l’épaisseur de la scrollbar à 10px*/
+/*Met l’épaisseur des scrollbar à 10px*/
 ::-webkit-scrollbar {
 	/*Scrollbar Vertical*/
 	width: 10px;
@@ -23,18 +23,18 @@
 	height: 10px;
   }
 
-/*Personnalise la scrollbar*/
+/*Personnalise les scrollbar*/
 ::-webkit-scrollbar-thumb {
-	/*La met en bleu*/
+	/*Les met en bleu*/
 	background-color: var(--bleu);
-	/*Arrondie ses bords*/
+	/*Arrondit leur bord*/
 	border-radius: 10px;
   }
   
 
 /*__________________________Séléction__________________________*/
 
-/*Empêche L'utilisateur de sélectionner les images*/
+/*Empêche l'utilisateur de sélectionner les images*/
 img{
 	-webkit-user-select: none;
 }
@@ -60,14 +60,14 @@ hr{
   text-align: center;
 }
 
-/*Création d'une barre horizontal*/
+/*Création d'une barre horizontale*/
 hr:before {
     content: '';
     background: linear-gradient(to right, transparent, var(--blanc), transparent);
     position: absolute;	
     height: 3px;
 
-    /*Fait que la barre prends 90% de la page*/
+    /*Fait que la barre prend 90% de la page*/
     left: 5%;
     width: 90%;
 
@@ -90,12 +90,12 @@ hr:after {
     font-weight: 555;
 }
 
-/*Modifie la couleur du gradient pour qu'il soit visible dans la partie contenu*/
+/*Modifie la couleur du gradient pour qu'il soit visible dans la partie contenue*/
 #Contenu hr:before {
 	background: linear-gradient(to right, transparent, var(--bleu), transparent);
 }
 
-/*Modifie la couleur du texte pour qu'il soit lisible dans la partie contenu*/
+/*Modifie la couleur du texte pour qu'il soit lisible dans la partie contenue*/
 #Contenu hr:after{
 
 	/*Espace les lettres de 5px*/
@@ -129,15 +129,15 @@ body {
 	overflow-x: overlay;
 	overflow-y: overlay;
 
-	/* Parametreage du fondu de chargement */
+	/* Paramétrage du fondu de chargement */
 	animation-name: Fondu;
-	animation-duration: 0.2s;
+	animation-duration: 0.3s;
 
-	/*Fait que l’animation ne se fera qu'une seul fois*/
+	/*Fait que l’animation ne se fera qu'une seule fois*/
 	animation-iteration-count: 1; 
 }
 
-/*Configure l'animation fondu*/
+/*Configure l'animation de fondu*/
 @keyframes Fondu { 
 	/*Commence l’animation, invisible*/
 	from {opacity: 0}
@@ -171,11 +171,11 @@ body {
 	height: max(100vh, 100%);
 }
 
-/*Configure un pseudo élément pour 'completer' la vague du bandeau*/
+/*Configure un pseudo élément pour 'compléter' la vague du bandeau*/
 #Bandeau::before{
 	content : '';
 
-	/*fixe cet élément en haut a droite du bandeau*/
+	/*Fixe cet élément en haut à droite du bandeau*/
 	position:absolute;
 	top: 0;
 	left: 100%;
@@ -183,7 +183,7 @@ body {
 	/*Le positionne en arrière plan*/
 	z-index:-1 ;
 
-	/*arrondi le bord supérieur gauche*/
+	/*Arrondit le bord supérieur gauche*/
 	border-top-left-radius: 50%;
 	width:100px;
 	height:100px;
@@ -193,21 +193,21 @@ body {
 	box-shadow: -25px -25px 0px 0px var(--bleu);
 }
 
-/*Arrondie les bords de la photos et lui rajoute un contours blanc*/
+/*Arrondit les bords de la photo et lui rajoute un contour blanc*/
 #Bandeau .Portrait img{
 	width: 10em;
 	border-radius: 50%;
 	border: 5px solid var(--blanc);
 }
 
-/*Centre le Nom/Prénom et grossie le texte*/
+/*Centre le Nom/Prénom et grossit le texte*/
 #Bandeau .Portrait h1{
 	width: 100%;
 	text-align: center;
 	font-size: 1.4em;
 }
 
-/*Met a la ligne le Nom et espace ses lettres*/
+/*Met à la ligne le Nom et espace ses lettres*/
 #Bandeau .Portrait h1 span{
 	display: block;
 	letter-spacing: 9px;
@@ -252,7 +252,7 @@ body {
 	grid-row-gap: 10px;
 }
 
-/*Fixe les conteneurs a leur zone*/
+/*Fixe les conteneurs à leur zone*/
 #Contenu .Experience{grid-area: Experience}
 #Contenu .Formation{grid-area: Formation}
 #Contenu .Competences{grid-area: Competences}
@@ -265,7 +265,7 @@ body {
 	font-size: inherit;
 }
 
-/*Reset de la balise p des articles*/
+/*Reset de la balise paragraphe des articles*/
 #Contenu article p{
 	margin-block-start: 0;
 }
@@ -289,7 +289,7 @@ body {
 	padding: 5px;
 }
 
-/*Mise en place d'une bordure gauche pour toutes les puces sauf la 1ere*/
+/*Mise en place d'une bordure gauche pour toutes les puces sauf la 1ère*/
 #Contenu .Formation ul li+li{
 	border-left: 2px solid grey;
 }
@@ -310,17 +310,17 @@ body {
 	align-items: center;
 }
 
-/*Création d'une grille fixant le nom et la jauge de progression associé a droite*/
+/*Création d'une grille fixant le nom et la jauge de progression associée à droite*/
 #Contenu .Progression div{
 	display: grid;
 	grid-template-areas: "nom niveau";
 	grid-template-columns: 1fr 1fr;
 	transition: .3s;
 }
-/*Fixe les objets a leur zone*/
+/*Fixe les objets à leur zone*/
 #Contenu .Progression span{grid-area: nom}
 
-/*Espace de 15px tous les compétences paire*/
+/*Espace de 15px toutes les compétences impaires*/
 #Contenu .Progression div:nth-child(odd){
 	margin-top: 15px;
 } 
@@ -341,11 +341,11 @@ body {
 	/*Met la liste en ligne*/
 	display: inline-block;
 
-	/*Forme un carré de 0.7em de coté*/
+	/*Forme un carré de 0.7em de côté*/
 	width: .7em;
 	height: .7em;
 
-	/*Arrondie et colorie ses bords*/
+	/*Arrondit et colorie ses bords*/
 	border-radius:50%;
 	border : 3px solid var(--bleu);
 
@@ -363,7 +363,7 @@ body {
 	background:linear-gradient(to right, var(--bleu) 50%, var(--blanc) 50%);
 }
 
-/*Met a 110% la taille des jauges de progression quand on passe la souris dessus*/
+/*Met à 110% la taille des jauges de progression quand on passe la souris dessus*/
 #Contenu .Progression div:hover{
 	transform: scale(1.1);
 }
